# approveapi-openapi-rs

./: Cargo.toml  README.md
docs/: AnswerMetadata.md  ApproveApi.md  CreatePromptRequest.md  Error.md  Prompt.md  PromptAnswer.md  PromptMetadata.md  PromptStatus.md
src/: lib.rs
src/apis/: approve_api.rs  client.rs  configuration.rs  mod.rs
src/models/: answer_metadata.rs  create_prompt_request.rs  error.rs  mod.rs  prompt.rs  prompt_answer.rs  prompt_metadata.rs  prompt_status.rs
