[package]
description = "INTERNAL USE ONLY. OpenAPI-generated ApproveAPI rust client, used by the official client: https://crates.io/crates/approveapi."
license = "MIT OR Apache-2.0"
name = "approveapi_openapi"
version = "0.1.6"
authors = ["hello@approveapi.com"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
hyper = "^0.12.11"
hyper-tls = "0.3"
serde_yaml = "0.7"
base64 = "~0.7.0"
futures = "^0.1.23"
http = "^0.1.13"

[dev-dependencies]
tokio-core = "^0.1.17"
